--- a/css/style.css
+++ b/css/style.css
@@ -256,14 +256,18 @@ html {
   --theme-color: #E5E5E5;
   --dark-theme-color: #172755;
   --red-theme-color: #EF2A82;
-  --text-color: #ffffff;
+  --white-color: #ffffff;
   --text-color-secondary: #8794BA;
+  --dark-theme-color-2: #0F1F4B;
+  --line-border-color: #2A407C;
+  --hover-line-border-color: #D3D9E9;
 }
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--text-color-secondary);
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.5;
 }
 a,
 ::before,
@@ -285,27 +289,42 @@ button {
   display: inline-flex;
 }
 .container {
-  max-width: 1460px;
+  max-width: 1180px;
   width: 100%;
   margin: 0 auto;
 }
 h1{
   font-weight: 700;
   font-size: 50px;
-  color: var(--text-color);
+  color: var(--white-color);
   width: 550px;
   line-height: 1.2;
   margin-bottom: 15px;
 }
-/*=========================COMMON STYLES END=============================*/
-
-/*=========================PAGE STYLES START===========================*/
-
-/*=========================HEADER START===========================*/
-.header{
-  position: absolute;
-  width: 100%;
-  padding: 50px;
+h2{
+  color: var(--dark-theme-color);
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  line-height: 1.2;
+  transition: .3s;
+}
+h3{
+  font-size: 30px;
+  color: var(--white-color);
+  margin-bottom: 10px;
+  font-weight: 700;
+  transition: .3s;
+}
+h4{
+  font-size: 60px;
+  font-weight: 700;
+  color: var(--white-color);
+}
+h5{
+  color: var(--dark-theme-color);
+  font-weight: 700;
+  margin-bottom: 15px;
 }
 .logo{
   display: flex;
@@ -318,7 +337,7 @@ h1{
 }
 .logo-span{
   text-transform: uppercase;
-  color: var(--text-color);
+  color: var(--white-color);
   font-weight: bold;
   font-size: 18px;
 }
@@ -330,37 +349,242 @@ h1{
 .nav{
   display: flex;
 }
+.nav li{
+  transition: .3s;
+}
 .nav li:nth-child(n+2){
   margin-left: 36px;
+}
+.nav li:hover{
+  color: var(--white-color);
+}
+.red-btn{
+  background-color: var(--red-theme-color);
+  color: var(--white-color);
+  border: 1px solid transparent;
+}
+.red-btn:hover{
+  background-color: transparent;
+  border: 1px solid var(--text-color-secondary);
+}
+.article{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*=========================COMMON STYLES END=============================*/
+
+/*=========================PAGE STYLES START===========================*/
+
+/*=========================HEADER START===========================*/
+.header{
+  position: absolute;
+  width: 100%;
+  padding: 50px;
+  z-index: 999;
 }
 .button-right{
   border: solid 1px var(--text-color-secondary);
   border-radius: 999px;
   padding: 10px 40px;
   margin-left: 30px;
+  transition: .3s; 
+}
+.button-left{
+  transition: .3s;
+}
+.button-left:hover{
+  color: var(--white-color);
+}
+.button-right:hover{
+  background-color: var(--red-theme-color);
+  box-shadow: 0 6px 20px 2px var(--red-theme-color);
+  color: var(--white-color);
+  border: transparent solid 1px;
+  transform: translateY(-3px);
 }
 /*=========================HEADER END===========================*/
 
 /*=========================HERO START===========================*/
 .hero{
   background-color: var(--dark-theme-color);
-  padding: 200px;
+  border-bottom: 15px solid var(--red-theme-color);
+  transform: skewY(-8deg);
+  padding-top: 220px;
+  padding-bottom: 95px;
+  
+}
+.hero-container{
+  transform: skewY(8deg);
+  display: flex;
+  justify-content: space-between;
 }
 .hero-p{
   font-size: 18px;
   width: 550px;
+  padding-bottom: 50px;
+}
+.header-nav{
+  position: relative;
+  left: -10%;
+}
+.hero-image{
+  height: 550px;
+  width: 810px;
+  position: absolute;
+  top: -90px;
+  left: 620px;
+}
+.hero-button{
+  padding: 16px 80px;
+  border-radius: 999px;
+  transition: .3s;
 }
 /*=========================HERO END===========================*/
 
 /*=========================MAIN START===========================*/
-
+.main{
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+.main-p{
+  margin-bottom: 80px;
+  width: 1060px;
+  font-size: 18px;
+  text-align: center;
+}
+.features{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 65px;
+  text-align: center;
+}
+.feature-icons{
+  font-size: 35px;
+  color: var(--red-theme-color);
+  margin-bottom: 25px;
+}
+.feature-p{
+  width: 350px;
+}
+.section-content{
+  width: 480px;
+  font-size: 18px;
+}
+.main-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 0;
+}
+.reverse-section{
+  display: flex;
+  flex-direction: row-reverse;
+}
+.section-img{
+  width: 600px;
+  height: 410px;
+}
 /*=========================MAIN END===========================*/
 
 /*=========================PLANS START===========================*/
+.plans{
+  background-color: var(--dark-theme-color);
+  border-top: 15px solid var(--red-theme-color);
+  transform: skewY(-8deg);
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+.plans-container{
+  transform: skewY(8deg);
+}
+.plans h2{
+  color: var(--white-color);
+}
+.plans-p{
+  text-align: center;
+  font-size: 18px;
+  width: 650px;
+  margin-bottom: 80px;
+  display: flex;
+  align-items: center;
+}
+.plans-sections{
+  display: flex;
+  justify-content: space-between;
+}
+.plans-section{
+  background-color: var(--dark-theme-color-2);
+  padding: 50px 60px 70px 60px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  transition: .3s;
+}
+.dollar{
+  font-size: 30px;
+}
+.order-button{
+  padding: 16px 83px;
+  border: 1px solid;
+  border-radius: 999px;
+  transition: .3s;
+}
+.order-button:hover{
+  color: var(--white-color);
+  background-color: var(--red-theme-color);
+}
+.line{
+  width: 220px;
+  height: 1px;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  margin-top: 37px;
+  margin-bottom: 28px;
+  color: var(--line-border-color);
+  transition: .3s;
+}
+.price{
+  margin-bottom: 40px;
+}
+.plans-section:hover h3, .plans-section:hover h4{
+  color: var(--dark-theme-color);
+}
+.plans-section:hover .line{
+  color: var(--hover-line-border-color);
+}
+.plans-section:hover{
+  background-color: var(--white-color);
+  box-shadow: 0 18px 18px 4px var(--dark-theme-color-2);
+}
 
 /*=========================PLANS END===========================*/
 
 /*=========================FOOTER START===========================*/
-
+.footer{
+  position: absolute;
+  width: 100%;
+}
+.sci{
+  display: flex;
+}
+.sci li{
+  transition: .3s;
+  font-size: 18px;
+}
+.sci li:nth-child(n+2){
+  margin-left: 40px;
+}
+.sci li:hover{
+  color: var(--red-theme-color);
+}
+.footer-logo{
+  color: var(--text-color-secondary);
+  width: 30px;
+  height: 30px;
+}
 /*=========================FOOTER END===========================*/
 /*=========================PAGE STYLES END===========================*/
