--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ h5{
   transform: skewY(-8deg);
   padding-top: 200px;
   padding-bottom: 200px;
-  box-shadow: 0 300px 0 var(--dark-theme-color);
+  box-shadow: 0 500px 0 var(--dark-theme-color);
 }
 .plans-container{
   transform: skewY(8deg);
@@ -590,3 +590,97 @@ h5{
 }
 /*=========================FOOTER END===========================*/
 /*=========================PAGE STYLES END===========================*/
+
+/*=========================ADAPTATION START===========================*/
+/* XX-Large devices (larger desktops) */
+/* No media query since the xxl breakpoint has no upper bound on its width */
+
+/* X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) {
+  .container{
+    width: 1000px;
+  }
+  h1{
+    font-size: 48px;
+  }
+  .hero-image {
+    position: static;
+    height: auto;
+    width: 517px;
+  }
+  .hero-p{
+    padding-bottom: 35px;
+  }
+  .section-img{
+    width: 500px;
+    height: auto;
+  }
+  .plans-section{
+    padding: 50px 40px 50px 40px;
+  }
+  .hero-button{
+    padding: 12px 60px;
+  }
+}
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+  .container{
+    width: auto;
+    padding: 0 10px;
+  }
+  .hero{
+    padding-bottom: 60px;
+    padding-top: calc(var(--shift) + 200px);
+  }
+  .hero-p{
+    width: auto;
+  }
+  h1{
+    font-size: 45px;
+  }
+  .hero-content{
+    width: 470px;
+  }
+  .main-p{
+    width: 900px;
+  }
+  .feature-p{
+    width: auto;
+  }
+  .header{
+    padding: 50px 20px;
+  }
+  .footer{
+    padding: 0 20px;
+  }
+  .hero-image{
+    width: 512px;
+  }
+  .main{
+    padding-top: 120px;
+    padding-bottom: 50px;
+  }
+  .plans{
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .section-content{
+    width: 470px;
+  }
+  h2{
+    font-size: 36px;
+  }
+}
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+  
+}
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+  
+}
+/* X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) and (min-width: 320px) {
+  
+}
+/*=========================ADAPTATION END===========================*/
