--- a/css/style.css
+++ b/css/style.css
@@ -512,9 +512,11 @@ h5{
   display: flex;
   align-items: center;
 }
-.plans-sections{
+.plans-slider>.plans-sections{
   display: flex;
   justify-content: space-between;
+  height: auto;
+  width: auto;
 }
 .plans-section{
   background-color: var(--dark-theme-color-2);
@@ -607,7 +609,7 @@ h5{
   .hero-image {
     position: static;
     height: auto;
-    width: 517px;
+    width: 510px;
   }
   .hero-p{
     padding-bottom: 35px;
